--- a/frontend/src/components/TodoApp.css
+++ b/frontend/src/components/TodoApp.css
@@ -16,15 +16,16 @@
 }
 
 .add-todo {
-  height: 3em;
   text-align: center;
+  display: flex;
 }
 
 .add-todo > label {
   background-color: lightblue;
-  padding: 0.7em;
+  padding: 0.69em;
   border-radius: 0.3em 0 0 0.3em;
   font-weight: bold;
+  min-width: 140px;
 }
 
 .add-todo > input {
@@ -41,6 +42,7 @@
 
 .add-todo > button {
   height: 3em;
+  min-width: 80px;
   padding: 0.7em;
   border-radius: 0 0.3em 0.3em 0;
   background-color: lightblue;
@@ -54,4 +56,26 @@
 
 .add-todo > button:active {
   background-color: rgb(64, 145, 172);
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
+  width: 40%;
+  margin: auto;
+  font-size: 1.2em;
+}
+
+.tasks > li {
+  background-color: lightblue;
+  margin: 0.5em;
+  padding: 0.5em;
+  min-width: 200px;
+  width: 100%;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
